--- a/_posts/2019-07-01-the-us-narrative-today.html
+++ b/_posts/2019-07-01-the-us-narrative-today.html
@@ -2609,107 +2609,107 @@ stories:
   domain: http://www.dglobe.com/
   link: https://www.dglobe.com/incoming/2732889-Two-Smart-Driver-classes-scheduled
 images:
-- name: razorwire-DSC-0080-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-sand-paper.jpg
-- name: statue-face-open-mouth-statue-face-open-mouth-blue-brush.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-blue-brush.png
-- name: border-crossing-bordercrossing-matrix.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-matrix.png
-- name: gears-4882162452-fa3126b38d-b-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-matrix.jpg
-- name: locked-up-steam-lock-up-steam-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-oily-mcoilface.jpg
-- name: crow_dali_three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_dali_three.jpg
-- name: server-cloud-server-racks-door-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-yellow-paper.jpg
-- name: adam-smith-adam-smith-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-really-hot.jpg
-- name: oldhouse-oldhouse-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-attack-planes.jpg
-- name: abe-lincoln-one-ww2-color-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-ww2-color-file-00-00-15-87.jpg
-- name: aws-s3-stories-new-17-88-800-500-0-max-0--5--5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-17-88-800-500-0-max-0--5--5.jpg
-- name: oldtrain-oldtrain-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-yellow-collage.jpg
-- name: adam-smith-adam-smith-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-copper-circuit.jpg
-- name: lincoln-memorial-lincolnmemorial-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-mucha-mult.jpg
-- name: catacombs-catacombs-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-ww2-color.jpg
-- name: abandonedbuildings_dry_skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_dry_skin.jpg
-- name: birdhouse-birdhouse-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-dark-dali.jpg
-- name: old-gas-pumps-oldgaspumps-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-gan-vogh.jpg
-- name: old-gas-pumps-oldgaspumps-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-graham-sutherland.jpg
-- name: oldsmallboat-oldsmallboat-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-blue-circuit.jpg
-- name: paris-paris-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-mucha-mult.jpg
-- name: old-gas-pumps-oldgaspumps-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-dry-skin.jpg
-- name: hollywood-building-hollywood-building-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-post-modern.jpg
-- name: christianity-christianity-under-construction-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-marcel-duchamp.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-alien-goggles.jpg
-- name: nazi-invasion-IMG_6170.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_6170.jpg
-- name: san-francisco-street-view-san-francisco-street-view-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-cinnamon-rolls.jpg
-- name: amusement-park-amusement-park-2-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-dali-two.jpg
-- name: berlinwall2-berlinwall-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-blue-electricity.jpg
-- name: crow_crafty_painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_crafty_painting.jpg
-- name: locked-up-steam-lock-up-steam-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-crabapple.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-rainbow-festival.jpg
-- name: abe-lincoln-one-really-hot-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-really-hot-file-00-00-00-00.jpg
-- name: old-granary-field-oldhouse-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-dark-soul.jpg
-- name: window-window-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-sand-paper.jpg
-- name: beach-clouds-lifeguard-beachclouds-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-dali-three.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-atari-asteroids.jpg
-- name: downtheline-downtheline-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-atari-missle.jpg
-- name: white-house-lawn-white-house-lawn-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-yellow-collage.jpg
-- name: subway-subway-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-colored-circuits.jpg
-- name: oldcabin-store-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-spagetti-accident.jpg
-- name: crow-crow-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-clean-view.jpg
-- name: aws-s3-stories-shipping-energy-trucking.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-shipping-energy-trucking.jpg
-- name: school-clouds-church-clouds-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-neo-instinct.jpg
-- name: capital-battle-capitolbattle-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-crabapple.jpg
-- name: border-fence-border-fence-on-hill-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-sunday.jpg
-- name: fence-mexico-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-deep-connections.jpg
-- name: white-house-lawn-white-house-lawn-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-purple-storm.jpg
-- name: old-gas-pumps-oldgaspumps-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-dark-rain.jpg
-- name: liberty-back-statue-liberty-back-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-colored-circuits.jpg
-- name: mediterranean-mediterranean-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-pablo-blue.jpg
+- name: stories-new-49-127-800-500-0-max-0-1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-49-127-800-500-0-max-0-1--1.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-diego-rivera1.jpg
+- name: server-racks-door-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-door-dark-dali.jpg
+- name: power-lines-power-lines-empty-space-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-smoking-cigarette.jpg
+- name: white-house-whitehouse-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-cinnamon-rolls.jpg
+- name: catacombs-catacombs-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-green-zuma.jpg
+- name: oldhousecars-house-old-cars-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-gan-vogh.jpg
+- name: machine-road-machine-road-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-alberto-giacometti.jpg
+- name: oldsmallboat-oldsmallboat-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-diego-rivera1.jpg
+- name: beach-rocks-beach-rocks-currents-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-cinnamon-rolls.jpg
+- name: server-cloud-server-racks-clouds-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-dark-soul.jpg
+- name: oldtrain-oldtrain-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-attack-planes.jpg
+- name: liberty-back-statue-liberty-back-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-colorful-blocks.jpg
+- name: gears-4882162452-fa3126b38d-b-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-blue-circuit.jpg
+- name: hollywood-building-hollywood-building-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-mucha-mult.jpg
+- name: scream-IMG_8486.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_8486.jpg
+- name: window-window-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-atari-asteroids.jpg
+- name: docks-docks-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-spagetti-accident.jpg
+- name: store-on-corner-store-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-dark-soul.jpg
+- name: aws-s3-stories-adam-smith-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-adam-smith-blue-circuit.jpg
+- name: locked-up-steam-lock-up-steam-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-matrix.jpg
+- name: liberty-back-statue-liberty-back-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-gan-vogh.jpg
+- name: cargo-ship-cargo-ship-on-sea-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-copper-circuit-2.jpg
+- name: oldtrain-oldtrain-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-deep-connections.jpg
+- name: mosaic-face-mosaic-face-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-space-pizza.jpg
+- name: capital-battle-capitolbattle-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-dark-rain.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-blue-circuit-3.jpg
+- name: old-gas-pumps-oldgaspumps-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-diego-rivera1.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-copper-circuit.jpg
+- name: downtown-los-angeles-downtown-la-dark-soul.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-dark-soul.JPG
+- name: downtown-trucksilo-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-mucha-mult.jpg
+- name: aws-s3-stories-fence-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-fence-dark-dali.jpg
+- name: gears-4882162452-fa3126b38d-b-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-space-pizza.jpg
+- name: aws-s3-stories-cargo-ship-on-sea-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-cargo-ship-on-sea-copper-circuit.jpg
+- name: carry-load-carryload-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-wols.jpg
+- name: oldroad-old-road-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-yellow-paper.jpg
+- name: old-barn-old-barn-1500-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-ww2-color.jpg
+- name: cargo-ship-cargo-ship-on-sea-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-deep-connections.jpg
+- name: mediterranean-mediterranean-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-space-pizza.jpg
+- name: paris-paris-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-creativity.jpg
+- name: art-museum-art-museum-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-green-zuma.jpg
+- name: abandonedbuildings_dark_dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_dark_dali.jpg
+- name: bordercrossing-bordercrossing-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-ww2-color.jpg
+- name: mediterranean-mediterranean.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean.jpg
+- name: castle-wall-DSC-0067-post-modern.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-post-modern.JPG
+- name: white-house-whitehouse-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-aqua.jpg
+- name: dc-statue-dcstatue-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-rainbow-festival.jpg
+- name: stories-castle-walls-cannon-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-castle-walls-cannon-satan-red.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-satan-red.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-satan-red.png
+- name: downtown-los-angeles-downtown-la-crabapple.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-crabapple.JPG
+- name: containership-containership-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-purp-paper.jpg
 ---
 Powerful Bomb Blast Rocks Afghan Capital, Scores Wounded.&nbsp;We Love The Daily Grind.&nbsp;Alleged Drunken Driver Plows Into Wyandotte Law Firm Building.&nbsp;Lights Over London Brings Out 1,200 People.&nbsp;Madrid Region Wildfire Still Burns Out Of Control On 4th Day.&nbsp;Out Of The Past.&nbsp;Paint And Pottery Camp.&nbsp;Discovery Awards Names Two Owasso Students Oklahoma High School Musical Theatre Winners.&nbsp;
